crates/fastapi-output/tests/snapshots/snapshot_tests__routes_table_empty.snap
---
source: crates/fastapi-output/tests/snapshot_tests.rs
expression: output
---
No routes registered.
