crates/fastapi-output/tests/snapshots/snapshot_tests__shutdown_complete.snap
---
source: crates/fastapi-output/tests/snapshot_tests.rs
expression: output
---
Shutdown Progress
-----------------
Phase: Complete
Connections: none
Shutdown complete
