crates/fastapi-output/tests/snapshots/snapshot_tests__shutdown_progress.snap
---
source: crates/fastapi-output/tests/snapshot_tests.rs
expression: output
---
Shutdown Progress
-----------------
Phase: Grace Period
Connections: none
In-flight requests: 5
