crates/fastapi-output/tests/snapshots/snapshot_tests__validation_error_nested.snap
---
source: crates/fastapi-output/tests/snapshot_tests.rs
expression: result.plain
---
Validation Error (1 error(s)):

  - body.items[0].price: ensure this value is greater than 0
    [type: value_error.number.not_gt]
