crates/fastapi-output/tests/snapshots/snapshot_tests__validation_error_single.snap
---
source: crates/fastapi-output/tests/snapshot_tests.rs
expression: result.plain
---
Validation Error (1 error(s)):

  - body.email: value is not a valid email address
    [type: value_error.email]
